--- a/login.html
+++ b/login.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <!-- Ícone da aba do navegador -->
+    <link rel="shortcut icon" href="assets/img/coleta-verde.png" type="image/x-icon">
+
     <link rel="shortcut icon" href="assets/img/COLETA__1_-removebg-preview.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
         <link rel="stylesheet" href="assets/login.css">
@@ -16,7 +19,7 @@
         
         <!-- Seção da imagem ao lado do formulário -->
         <div class="form-image">
-            <img src="assets/img/COLETA__1_-removebg-preview.png" alt="">
+            <img src="assets/img/coleta-verde.png" alt="">
         </div>
 
         <!-- Seção do formulário -->
@@ -53,9 +56,9 @@
                 <div class="continue-button">
                     <button>CONTINUAR</button>
                 </div>
-                <div class="login-button">
+                <div class="login-button ">
                 <!-- Botão de agendamento (link estilizado como botão) -->
-                    <a class="mb-52" href="registro.html">REGISTRE-SE</a>
+                    <a class="mb-52 registro-bnt-hover" href="registro.html">REGISTRE-SE</a>
                 </div>
             </form>
         </div>
