--- a/cancelar-coleta.html
+++ b/cancelar-coleta.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" href="assets/img/coleta-verde.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" 
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="assets/style.css">
+    <link rel="stylesheet" href="public/assets/style.css">
 
   <title>CANCELAR COLETA</title>
 
