--- a/funcionario.html
+++ b/funcionario.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Ícone da aba do navegador -->
-    <link rel="shortcut icon" href="assets/img/coleta-verde.png" type="image/x-icon">
+    <link rel="shortcut icon" href="public/assets/img/coleta-verde.png" type="image/x-icon">
 
     <!-- Importa o Bootstrap 5 para estilos prontos e responsividade -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" 
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
     <!-- Importa o CSS para o projeto -->
-    <link rel="stylesheet" href="assets/style.css">
+    <link rel="stylesheet" href="public/assets/style.css">
 
     <title>PERFIL DO FUNCIONÁRIO</title>
 
