--- a/src/pages/auth/login.html
+++ b/src/pages/auth/login.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Ícone da aba do navegador -->
-    <link rel="shortcut icon" href="assets/img/coleta-verde.png" type="image/x-icon">
+    <link rel="shortcut icon" href="/public/assets/img/coleta-verde.png" type="image/x-icon">
 
-    <link rel="shortcut icon" href="assets/img/COLETA__1_-removebg-preview.png" type="image/x-icon">
+    <link rel="shortcut icon" href="public/assets/img/COLETA__1_-removebg-preview.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-        <link rel="stylesheet" href="assets/login.css">
+        <link rel="stylesheet" href="styles/login.css">
     <title>REGISTRE-SE</title>
 </head>
 <body>
