--- a/ver-rotas.html
+++ b/ver-rotas.html
@@ -5,13 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- Ícone da aba -->
-  <link rel="shortcut icon" href="assets/img/coleta-verde.png" type="image/x-icon" />
+  <link rel="shortcut icon" href="public/assets/img/coleta-verde.png" type="image/x-icon" />
 
   <!-- Bootstrap CSS (Apenas uma versão) -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" />
 
   <!-- CSS personalizado -->
-  <link rel="stylesheet" href="assets/style.css" />
+  <link rel="stylesheet" href="public/assets/style.css" />
 
   <title>VER ROTAS</title>
 </head>
