Update fields from cancelar-coleta.html

--- a/cancelar-coleta.html
+++ b/cancelar-coleta.html
@@ -26,14 +26,12 @@
   <main class="cancelamento">
     <h2>CANCELAMENTO DE COLETA</h2>
     <form>
-      <label for="endereco">ENDEREÇO:</label>
-      <input type="text" id="endereco" name="endereco" />
-
-      <label for="responsavel">RESPONSÁVEL:</label>
-      <input type="text" id="responsavel" name="responsavel" />
 
       <label for="motivo">MOTIVO DO CANCELAMENTO:</label>
       <textarea id="motivo" name="motivo"></textarea>
+
+      <label for="imagem">ENVIE UMA IMAGEM (opcional):</label>
+      <input type="file" id="imagem" name="imagem" accept="image/*" />
 
       <br><br>
       <!-- Botão para enviar -->
