--- a/adm/gerenciarRotas.html
+++ b/adm/gerenciarRotas.html
@@ -13,6 +13,11 @@
     <header class="bg-success text-white shadow-sm">
         <div class="container py-3 d-flex justify-content-between align-items-center">
             <div class="d-flex align-items-center">
+                        <div class="logo">
+        <!-- Logotipo do sistena -->
+        <img src="assets/img/coleta-verde-header-logo.png" alt="Logo Coleta Verde" />
+            <h1>COLETA VERDE</h1>
+        </div>
                 <h1 class="h2 mb-0">Coleta Verde</h1>
             </div>
             <div class="d-flex align-items-center">
