feat(citizen) : adicionando telas de cidadão
Está dando error ao conectar com o back

--- a/citizen/citizen.html
+++ b/citizen/citizen.html
@@ -15,7 +15,9 @@
         <img src="../public/assets/img/coleta-verde-header-logo.png" alt="Logo" class="logo">
         <h1>Coleta Verde</h1>
     </div>
-    <button class="novo-agendamento">+ Novo Agendamento</button>
+    <button class="novo-agendamento">
+      <a href="../citizen/appointment/appointment.html">+ Novo Agendamento</a>
+    </button>
   </header>
 
   <section class="perfil" id="user-info"></section>
@@ -37,6 +39,6 @@
     </table>
   </section>
 
-  <script src="../citizen/test.js"></script>
+  <script src="../citizen/citizen.js"></script>
 </body>
 </html>
