fix: resolve script path error

--- a/funcionario.html
+++ b/funcionario.html
@@ -23,7 +23,7 @@
     <header>
         <div class="logo">
         <!-- Logotipo do sistena -->
-        <img src="assets/img/coleta-verde-header-logo.png" alt="Logo Coleta Verde" />
+        <img src="public/assets/img/coleta-verde-header-logo.png" alt="Logo Coleta Verde" />
             <h1>COLETA VERDE</h1>
         </div>
         <!-- Botão de sair -->
@@ -34,7 +34,7 @@
   <section class="perfil">
     <div class="info">
       <div class="avatar">
-        <img src="assets/icons/profile.png">
+        <img src="public/assets/icons/profile.png">
       </div>
         <div class="dados">
             <h2>Nome do Funcionário</h2>
@@ -52,7 +52,7 @@
     <div class="style-btn">
       <!-- Botão de ver rotas (link estilizado como botão) -->
       <a class="btn-link" type="button" href="ver-rotas.html">VER ROTAS<br>
-        <img src="assets/icons/mapa.png" alt="Ícone de Mapa">
+        <img src="public/assets/icons/mapa.png" alt="Ícone de Mapa">
       </a>
     </div>
   </main>
