--- a/src/pages/citizen/citizen.html
+++ b/src/pages/citizen/citizen.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,12 +9,13 @@
   <link rel="stylesheet" href="../citizen/citizen.css">
   <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
 </head>
+
 <body>
 
   <header>
     <div>
-        <img src="../public/assets/img/coleta-verde-header-logo.png" alt="Logo" class="logo">
-        <h1>Coleta Verde</h1>
+      <img src="../public/assets/img/coleta-verde-header-logo.png" alt="Logo" class="logo">
+      <h1>Coleta Verde</h1>
     </div>
     <button class="novo-agendamento">
       <a href="../citizen/appointment/appointment.html">+ Novo Agendamento</a>
@@ -39,6 +41,9 @@
     </table>
   </section>
 
-  <script src="../citizen/citizen.js"></script>
+  <!-- Script -->
+  <script src="scripts/citizen.js"></script>
+  
 </body>
+
 </html>
