feat : corrigindo caminho de imagens

--- a/src/pages/citizen/citizen.html
+++ b/src/pages/citizen/citizen.html
@@ -14,7 +14,7 @@
 
   <header>
     <div>
-      <img src="../public/assets/img/coleta-verde-header-logo.png" alt="Logo" class="logo">
+      <img src="../../../public/assets/img/coleta-verde-header-logo.png" alt="Logo" class="logo">
       <h1>Coleta Verde</h1>
     </div>
     <button class="novo-agendamento">
