--- a/src/pages/citizen/appointment/appointment.html
+++ b/src/pages/citizen/appointment/appointment.html
@@ -13,7 +13,7 @@
 
   <header>
     <div class="logo-container">
-      <img src="../../public/assets/img/coleta-verde-header-logo.png" alt="Logo" class="logo">
+      <img src="../../../../public/assets/img/coleta-verde-header-logo.png" alt="Logo" class="logo">
       <h1>Coleta Verde</h1>
     </div>
     <button class="btn-voltar">
