--- a/funcionario/pages/cancelar-coleta.html
+++ b/funcionario/pages/cancelar-coleta.html
@@ -5,32 +5,39 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="shortcut icon" href="assets/img/coleta-verde.png" type="image/x-icon">
+    <!-- Ícone da aba do navegador -->
+    <link rel="shortcut icon" href="public/assets/img/coleta-verde.png" type="image/x-icon">
+
+    <!-- Fonte personalizada do Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
+
+    <!-- Importa o Bootstrap 5 para estilos prontos e responsividade -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" 
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="public/assets/style.css">
+
+    <!-- Importa o CSS para o projeto -->
+    <link rel="stylesheet" href="../css/styles/style.css">
 
   <title>CANCELAR COLETA</title>
-
 
 </head>
 <body>
 
-  <header>
+  <header class="hd d-flex justify-content-between align-items-center p-3 border-bottom">
     <div class="logo">
       <img src="public/assets/img/coleta-verde-header-logo.png" alt="Logo Coleta Verde" />
-      <h1>COLETA VERDE</h1>
+      <h1 class="ms-3 mb-0 h4">COLETA VERDE</h1>
     </div>
   </header>
 
   <main class="cancelamento">
     <h2>CANCELAMENTO DE COLETA</h2>
-    <form>
+    <form id="form-cancelamento">
 
-      <label for="motivo">MOTIVO DO CANCELAMENTO:</label>
+      <label for="motivo">Motivo do Cancelamento:</label>
       <textarea id="motivo" name="motivo"></textarea>
 
-      <label for="imagem">ENVIE UMA IMAGEM (opcional):</label>
+      <label for="imagem">Envie uma Imagem (opcional):</label>
       <input type="file" id="imagem" name="imagem" accept="image/*" />
 
       <br><br>
