--- a/funcionario/pages/funcionario.html
+++ b/funcionario/pages/funcionario.html
@@ -7,12 +7,15 @@
     <!-- Ícone da aba do navegador -->
     <link rel="shortcut icon" href="public/assets/img/coleta-verde.png" type="image/x-icon">
 
+    <!-- Fonte personalizada do Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
+
+    <!-- Importa o CSS para o projeto -->
+    <link rel="stylesheet" href="../css/styles/style.css">
+
     <!-- Importa o Bootstrap 5 para estilos prontos e responsividade -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" 
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
-    <!-- Importa o CSS para o projeto -->
-    <link rel="stylesheet" href="public/assets/style.css">
 
     <title>PERFIL DO FUNCIONÁRIO</title>
 
@@ -20,39 +23,40 @@
 <body>
     
     <!-- Cabeçalho da página com logo e botão de logout -->
-    <header>
+    <header class="d-flex justify-content-between align-items-center p-3 border-bottom">
         <div class="logo">
         <!-- Logotipo do sistena -->
         <img src="public/assets/img/coleta-verde-header-logo.png" alt="Logo Coleta Verde" />
-            <h1>COLETA VERDE</h1>
+            <h1 class="ms-3 mb-0 h4">COLETA VERDE</h1>
         </div>
         <!-- Botão de sair -->
         <button class="logout">Sair <span class="icon"></span></button>
     </header>
 
   <!-- Seção de perfil com avatar e dados do funcionário -->
-  <section class="perfil">
-    <div class="info">
-      <div class="avatar">
-        <img src="public/assets/icons/profile.png">
+  <section class="perfil container my-4">
+    <div class="info d-flex align-items-center row align-items-center">
+      <div class="avatar col-md-2 text-center">
+        <img src="/public/assets/icons/profile.png">
       </div>
-        <div class="dados">
-            <h2>Nome do Funcionário</h2>
-                <p>emailexample@gmail.com</p>
-                <p>(00) 99999-9999</p>
-                <p>Endereço, Nº - Cidade</p>
-        </div>
+        <div class="col-md-8">
+        <h2>Nome do Funcionário</h2>
+        <p>emailexample@gmail.com</p>
+        <p>(00) 99999-9999</p>
+        <p>Endereço, Nº - Cidade</p>
+      </div>
+      <div class="col-md-2 text-md-end mt-3 mt-md-0">
+        <button class="card-button editar btn btn-primary">Editar Perfil</button>
+      </div>
     </div>
-    <!-- Botão para editar o perfil -->
-    <button class="editar">Editar Perfil</button>
   </section>
 
   <!-- Área principal com o botão de ver rotas -->
-  <main class="main">
+  <main class="main d-flex justify-content-center align-items-center p-3 border-bottom">
     <div class="style-btn">
       <!-- Botão de ver rotas (link estilizado como botão) -->
-      <a class="btn-link" type="button" href="ver-rotas.html">VER ROTAS<br>
-        <img src="public/assets/icons/mapa.png" alt="Ícone de Mapa">
+      <a class="card-button" type="button" href="ver-rotas.html">VER ROTAS<br>
+        <!-- <img src="public/assets/icons/mapa.png" alt="Ícone de Mapa"> -->
       </a>
     </div>
   </main>
