--- a/funcionario/pages/ver-rotas.html
+++ b/funcionario/pages/ver-rotas.html
@@ -7,20 +7,26 @@
   <!-- Ícone da aba -->
   <link rel="shortcut icon" href="public/assets/img/coleta-verde.png" type="image/x-icon" />
 
+  <!-- Fonte personalizada do Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
+
+  <!-- Importa o CSS para o projeto -->
+  <link rel="stylesheet" href="../css/styles/style.css">
+
   <!-- Bootstrap CSS (Apenas uma versão) -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" />
 
-  <!-- CSS personalizado -->
-  <link rel="stylesheet" href="public/assets/style.css" />
-
   <title>VER ROTAS</title>
+
 </head>
 <body>
 
   <!-- Cabeçalho -->
-  <header class="d-flex justify-content-between align-items-center p-3 bg-light border-bottom">
+  <header class="hd d-flex justify-content-between align-items-center p-3 border-bottom">
     <div class="d-flex align-items-center">
-      <h1 class="ms-3 mb-0 h4">COLETA VERDE</h1>
+      <!-- Logotipo do sistena -->
+      <img src="public/assets/img/coleta-verde-header-logo.png" alt="Logo Coleta Verde" />
+        <h1 class="ms-3 mb-0 h4">COLETA VERDE</h1>
     </div>
     <button class="btn btn-outline-danger">Sair</button>
   </header>
@@ -78,7 +84,7 @@
   </div>
 
   <!-- Rodapé -->
-  <footer class="bg-light text-center py-3 border-top">
+  <footer class="text-center py-3 border-top">
     <p class="mb-1">2025 © Coleta Verde</p>
     <p class="mb-0">Todos os direitos reservados</p>
   </footer>
