--- a/adm/cadastastrar-rota.html
+++ b/adm/cadastastrar-rota.html
@@ -26,7 +26,7 @@
         crossorigin="anonymous"></script>
 
     <!-- Script JS da página -->
-    <script src="cadastro.js"></script>
+    <script src="/adm/scripts/cadastro.js"></script>
 </head>
 
 <body class="bg-light">
@@ -34,7 +34,7 @@
     <header class="navbar navbar-expand-lg navbar-dark bg-success fixed-top shadow-sm">
         <div class="container-fluid">
             <a class="navbar-brand fw-bold fs-5" href="#">Coleta Verde</a>
-            <a href="../tela-adm/index.html" class="btn btn-outline-light d-flex align-items-center">
+            <a href="/adm/adm.html" class="btn btn-outline-light d-flex align-items-center">
                 <i class="fas fa-arrow-left me-2"></i>
                 Voltar
             </a>
