--- a/adm/cadstroFuncionario.html
+++ b/adm/cadstroFuncionario.html
@@ -23,126 +23,53 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
         crossorigin="anonymous"></script>
+          <script src="/adm/scripts/funcionario.js"></script>
 </head>
 
 <body class="bg-light">
 
-    <!-- Barra de navegação -->
     <header class="navbar navbar-expand-lg navbar-dark bg-success fixed-top shadow-sm">
         <div class="container-fluid">
-            <!-- Nome do sistema -->
             <a class="navbar-brand fw-bold fs-4" href="#">COLETA VERDE</a>
 
-            <!-- Botão de voltar -->
-            <a href="../tela-adm/index.html" class="btn btn-outline-light d-flex align-items-center">
+            <a href="/adm/adm.html" class="btn btn-outline-light d-flex align-items-center">
                 <i class="fas fa-arrow-left me-2"></i>
                 Voltar
             </a>
         </div>
     </header>
 
-    <!-- Conteúdo principal -->
     <main class="container mt-5 pt-5 pb-5">
-        <!-- Título -->
         <h2 class="fs-2 fw-bold text-success mb-4 mt-4">Cadastro de Funcionário</h2>
 
-        <!-- Formulário -->
-        <form id="employeeForm" class="row ">
+        <form id="employeeForm" class="row">
 
-            <!-- Seção: Dados Pessoais -->
             <section class="col-12 card shadow-sm p-4 mb-4">
-                <h3 class="card-title h5 text-success mb-3">Dados Pessoais</h3>
+                <h3 class="card-title h5 text-success mb-3">Informações do Funcionário</h3>
                 <div class="row g-3">
-                    <div class="col-md-">
+                    <div class="col-md-12">
                         <label for="nome" class="form-label">Nome Completo</label>
                         <input type="text" class="form-control" id="nome" name="nome" required>
                     </div>
-                    <div class="col-md-">
-                        <label for="cpf" class="form-label">CPF</label>
-                        <input type="text" class="form-control" id="cpf" name="cpf" required>
-                    </div>
-                    <div class="col-md-">
-                        <label for="nascimento" class="form-label">Data de Nascimento</label>
-                        <input type="date" class="form-control" id="nascimento" name="nascimento" required>
-                    </div>
-                    <div class="col-md-">
-                        <label for="genero" class="form-label">Gênero</label>
-                        <select class="form-select" id="genero" name="genero" required>
-                            <option value="">Selecione</option>
-                            <option value="masculino">Masculino</option>
-                            <option value="feminino">Feminino</option>
-                            <option value="outro">Outro</option>
-                        </select>
-                    </div>
-                </div>
-            </section>
-
-            <!-- Seção: Endereço -->
-            <section class="col-12 card shadow-sm p-4 mb-4">
-                <h3 class="card-title h5 text-success mb-3">Endereço</h3>
-                <div class="row g-3">
-                    <div class="col-md-">
-                        <label for="logradouro" class="form-label">Logradouro</label>
-                        <input type="text" class="form-control" id="logradouro" name="logradouro" required>
-                    </div>
-                    <div class="col-md-">
-                        <label for="numero" class="form-label">Número</label>
-                        <input type="text" class="form-control" id="numero" name="numero" required>
-                    </div>
-                    <div class="col-md-">
-                        <label for="bairro" class="form-label">Bairro</label>
-                        <input type="text" class="form-control" id="bairro" name="bairro" required>
-                    </div>
-                    <div class="col-md-">
-                        <label for="cidade" class="form-label">Cidade</label>
-                        <input type="text" class="form-control" id="cidade" name="cidade" required>
-                    </div>
-                    <div class="col-md-">
-                        <label for="estado" class="form-label">Estado</label>
-                        <input type="text" class="form-control" id="estado" name="estado" required>
-                    </div>
-                    <div class="col-md-">
-                        <label for="cep" class="form-label">CEP</label>
-                        <input type="text" class="form-control" id="cep" name="cep" required>
-                    </div>
-                </div>
-            </section>
-
-            <!-- Seção: Contato -->
-            <section class="col-12 card shadow-sm p-4 mb-4">
-                <h3 class="card-title h5 text-success mb-3">Contato</h3>
-                <div class="row g-3">
-                    <div class="col-md-">
-                        <label for="telefone" class="form-label">Telefone</label>
-                        <input type="text" class="form-control" id="telefone" name="telefone">
-                    </div>
-                    <div class="col-md-">
+                    <div class="col-md-6">
                         <label for="email" class="form-label">E-mail</label>
                         <input type="email" class="form-control" id="email" name="email" required>
                     </div>
-                </div>
-            </section>
-
-            <!-- Seção: Dados Contratuais -->
-            <section class="col-12 card shadow-sm p-4 mb-">
-                <h3 class="card-title h5 text-success mb-3">Dados Contratuais</h3>
-                <div class="row g-3">
-                    <div class="col-md-">
+                    <div class="col-md-6">
+                        <label for="senha" class="form-label">Senha</label>
+                        <input type="password" class="form-control" id="senha" name="senha" required>
+                    </div>
+                    <div class="col-md-6">
+                        <label for="matricula" class="form-label">Matrícula</label>
+                        <input type="text" class="form-control" id="matricula" name="matricula" required>
+                    </div>
+                    <div class="col-md-6">
                         <label for="cargo" class="form-label">Cargo</label>
                         <input type="text" class="form-control" id="cargo" name="cargo" required>
                     </div>
-                    <div class="col-md-">
-                        <label for="salario" class="form-label">Salário</label>
-                        <input type="number" class="form-control" id="salario" name="salario" required>
-                    </div>
-                    <div class="col-md-">
-                        <label for="admissao" class="form-label">Data de Admissão</label>
-                        <input type="date" class="form-control" id="admissao" name="admissao" required>
-                    </div>
                 </div>
             </section>
 
-            <!-- Botões de ação -->
             <div class="col-12 d-flex justify-content-end gap-3">
                 <button type="reset" class="btn btn-secondary">Limpar</button>
                 <button type="submit" class="btn btn-success">Cadastrar</button>
@@ -152,5 +79,6 @@
     </main>
 
 </body>
+
 
 </html>
