--- a/adm/editar-funcionario.html
+++ b/adm/editar-funcionario.html
@@ -22,187 +22,104 @@
     <!-- Bootstrap CSS e JS para componentes como modal -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="..." crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="..." crossorigin="anonymous"></script>
+      <script src="/adm/scripts/editarFuncionario.js"></script>
 </head>
 
 <body class="bg-light">
-    <!-- Cabeçalho fixo com barra de navegação -->
+
     <header class="navbar navbar-expand-lg navbar-dark bg-success fixed-top shadow-sm">
         <div class="container-fluid">
-            <!-- Nome do sistema -->
             <a class="navbar-brand fw-bold fs-4" href="#">COLETA VERDE</a>
 
-            <!-- Botão de voltar -->
-            <a href="adm.html" class="btn btn-outline-light d-flex align-items-center">
+            <a href="/adm/adm.html" class="btn btn-outline-light d-flex align-items-center">
                 <i class="fas fa-arrow-left me-2"></i>
                 Voltar
             </a>
         </div>
     </header>
 
-    <!-- Conteúdo principal da página -->
     <main class="container mt-5 pt-5 pb-5">
-        <!-- Título da página -->
-        <h2 class="fs-1 fw-bold text-success mb-4 mt-4">Edição de Funcionário</h2>
+        <h2 class="fs-2 fw-bold text-success mb-4 mt-4">Editar Funcionário</h2>
 
-        <!-- Seção para buscar funcionário por CPF -->
-        <section class="card shadow-sm p-4 mb-4 mt-3">
-            <h3 class="card-title h5 text-success mb-3">Buscar Funcionário por CPF</h3>
-            <div class="input-group">
-                <input type="text" class="form-control" id="searchCpf" placeholder="Digite o CPF do funcionário" aria-label="CPF do funcionário" required>
-                <button class="btn btn-primary" type="button" id="btnSearchEmployee">
-                    <i class="fas fa-search me-2"></i>Buscar
-                </button>
-            </div>
-        </section>
-
-        <!-- Formulário de edição de funcionário -->
         <form id="editEmployeeForm" class="row">
+            <input type="hidden" id="funcionarioId" name="funcionarioId">
 
-            <!-- Seção de dados pessoais -->
             <section class="col-12 card shadow-sm p-4 mb-4">
-                <h3 class="card-title h5 text-success mb-3">Dados Pessoais</h3>
+                <h3 class="card-title h5 text-success mb-3">Informações do Funcionário</h3>
                 <div class="row g-3">
-                    <!-- Nome -->
                     <div class="col-md-12">
-                        <label for="editNome" class="form-label">Nome Completo</label>
-                        <input type="text" class="form-control" id="editNome" name="nome" value="João Silva" required>
+                        <label for="nome" class="form-label">Nome Completo</label>
+                        <input type="text" class="form-control" id="nome" name="nome" required>
                     </div>
-                    <!-- CPF -->
-                    <div class="col-md-12">
-                        <label for="editCpf" class="form-label">CPF</label>
-                        <input type="text" class="form-control" id="editCpf" name="cpf" value="123.456.789-00" required>
+                    <div class="col-md-6">
+                        <label for="email" class="form-label">E-mail</label>
+                        <input type="email" class="form-control" id="email" name="email" required>
                     </div>
-                    <!-- Data de nascimento -->
-                    <div class="col-md-12">
-                        <label for="editNascimento" class="form-label">Data de Nascimento</label>
-                        <input type="date" class="form-control" id="editNascimento" name="nascimento" value="1985-07-20" required>
+                    <div class="col-md-6">
+                        <label for="senha" class="form-label">Senha</label>
+                        <input type="password" class="form-control" id="senha" name="senha">
+                        <small class="form-text text-muted">Deixe em branco para manter a senha atual.</small>
                     </div>
-                    <!-- Gênero -->
-                    <div class="col-md-12">
-                        <label for="editGenero" class="form-label">Gênero</label>
-                        <select class="form-select" id="editGenero" name="genero" required>
-                            <option value="">Selecione</option>
-                            <option value="masculino" selected>Masculino</option>
-                            <option value="feminino">Feminino</option>
-                            <option value="outro">Outro</option>
+                    <div class="col-md-6">
+                        <label for="matricula" class="form-label">Matrícula</label>
+                        <input type="text" class="form-control" id="matricula" name="matricula" required>
+                    </div>
+                    <div class="col-md-6">
+                        <label for="cargo" class="form-label">Cargo</label>
+                        <input type="text" class="form-control" id="cargo" name="cargo" required>
+                    </div>
+                    <div class="col-md-6">
+                        <label for="status" class="form-label">Status</label>
+                        <select class="form-select" id="status" name="status" required>
+                            <option value="ativo">Ativo</option>
+                            <option value="inativo">Inativo</option>
+                            <option value="ferias">Férias</option>
                         </select>
                     </div>
                 </div>
             </section>
 
-            <!-- Seção de endereço -->
-            <section class="col-12 card shadow-sm p-4 mb-4">
-                <h3 class="card-title h5 text-success mb-3">Endereço</h3>
-                <div class="row g-3">
-                    <div class="col-md-12">
-                        <label for="editLogradouro" class="form-label">Logradouro</label>
-                        <input type="text" class="form-control" id="editLogradouro" name="logradouro" value="Rua das Flores" required>
-                    </div>
-                    <div class="col-md-12">
-                        <label for="editNumero" class="form-label">Número</label>
-                        <input type="text" class="form-control" id="editNumero" name="numero" value="123" required>
-                    </div>
-                    <div class="col-md-12">
-                        <label for="editBairro" class="form-label">Bairro</label>
-                        <input type="text" class="form-control" id="editBairro" name="bairro" value="Centro" required>
-                    </div>
-                    <div class="col-md-12">
-                        <label for="editCidade" class="form-label">Cidade</label>
-                        <input type="text" class="form-control" id="editCidade" name="cidade" value="São Paulo" required>
-                    </div>
-                    <div class="col-md-12">
-                        <label for="editEstado" class="form-label">Estado</label>
-                        <input type="text" class="form-control" id="editEstado" name="estado" value="SP" required>
-                    </div>
-                    <div class="col-md-12">
-                        <label for="editCep" class="form-label">CEP</label>
-                        <input type="text" class="form-control" id="editCep" name="cep" value="01000-000" required>
-                    </div>
-                </div>
-            </section>
-
-            <!-- Seção de contato -->
-            <section class="col-12 card shadow-sm p-4 mb-4">
-                <h3 class="card-title h5 text-success mb-3">Contato</h3>
-                <div class="row g-3">
-                    <div class="col-md-12">
-                        <label for="editTelefone" class="form-label">Telefone</label>
-                        <input type="text" class="form-control" id="editTelefone" name="telefone" value="(11) 98765-4321">
-                    </div>
-                    <div class="col-md-12">
-                        <label for="editEmail" class="form-label">E-mail</label>
-                        <input type="email" class="form-control" id="editEmail" name="email" value="joao.silva@example.com" required>
-                    </div>
-                </div>
-            </section>
-
-            <!-- Seção de dados contratuais -->
-            <section class="col-12 card shadow-sm p-4 mb-4">
-                <h3 class="card-title h5 text-success mb-3">Dados Contratuais</h3>
-                <div class="row g-3">
-                    <div class="col-md-12">
-                        <label for="editCargo" class="form-label">Cargo</label>
-                        <input type="text" class="form-control" id="editCargo" name="cargo" value="Coletor" required>
-                    </div>
-                    <div class="col-md-12">
-                        <label for="editSalario" class="form-label">Salário</label>
-                        <input type="number" class="form-control" id="editSalario" name="salario" value="2500.00" step="0.01" required>
-                    </div>
-                    <div class="col-md-12">
-                        <label for="editAdmissao" class="form-label">Data de Admissão</label>
-                        <input type="date" class="form-control" id="editAdmissao" name="admissao" value="2020-01-15" required>
-                    </div>
-                </div>
-            </section>
-
-            <!-- Botões de ação do formulário -->
-            <div class="col-12 d-flex justify-content-end gap-3">
-                <!-- Botão para abrir modal de histórico -->
-                <button type="button" class="btn btn-info text-white" data-bs-toggle="modal" data-bs-target="#collectionHistoryModal">
-                    <i class="fas fa-history me-2"></i>Histórico de Coletas
+            <div class="col-12 d-flex justify-content-between align-items-center mt-4">
+                <button type="button" class="btn btn-info" data-bs-toggle="modal" data-bs-target="#coletasModal">
+                    <i class="fas fa-clipboard-list me-2"></i> Ver Coletas Feitas 
                 </button>
-                <!-- Botão para limpar o formulário -->
-                <button type="reset" class="btn btn-secondary">Limpar</button>
-                <!-- Botão para salvar alterações -->
-                <button type="submit" class="btn btn-success">Salvar Alterações</button>
+
+                <div class="d-flex gap-3">
+                    <button type="button" class="btn btn-secondary" onclick="window.history.back();">Cancelar</button>
+                    <button type="submit" class="btn btn-success">Salvar Alterações</button>
+                </div>
             </div>
 
         </form>
     </main>
 
-    <!-- Modal do histórico de coletas -->
-    <div class="modal fade" id="collectionHistoryModal" tabindex="-1" aria-labelledby="collectionHistoryModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-lg">
-            <div class="modal-content">
-                <!-- Cabeçalho do modal -->
-                <div class="modal-header bg-success text-white">
-                    <h5 class="modal-title" id="collectionHistoryModalLabel">Histórico de Coletas de João Silva</h5>
-                    <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
+    <div class="modal fade" id="coletasModal" tabindex="-1" aria-labelledby="coletasModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-lg"> <div class="modal-content">
+                <div class="modal-header">
+
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Fechar"></button>
                 </div>
-                <!-- Corpo do modal com a tabela de coletas -->
                 <div class="modal-body">
-                    <p>Aqui você pode ver o histórico de coletas realizadas por este funcionário.</p>
-                    <table class="table table-striped table-hover">
-                        <thead>
-                            <tr>
-                                <th scope="col">Data</th>
-                                <th scope="col">Local</th>
-                                <th scope="col">Tipo de Material</th>
-                                <th scope="col">Peso (kg)</th>
-                                <th scope="col">Status</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <!-- Linhas com dados fictícios -->
-                            <tr><td>2025-05-30</td><td>Rua A, 123</td><td>Plástico</td><td>50</td><td>Concluída</td></tr>
-                            <tr><td>2025-05-28</td><td>Av. B, 456</td><td>Metal</td><td>120</td><td>Concluída</td></tr>
-                            <tr><td>2025-05-25</td><td>Praça C</td><td>Papel</td><td>80</td><td>Concluída</td></tr>
-                            <tr><td>2025-05-20</td><td>Rua D, 789</td><td>Vidro</td><td>75</td><td>Concluída</td></tr>
-                            <tr><td>2025-05-18</td><td>Av. E, 101</td><td>Orgânico</td><td>200</td><td>Concluída</td></tr>
-                        </tbody>
-                    </table>
+                    <div id="listaColetas">
+                        <table class="table table-striped table-hover">
+                            <thead>
+                                <tr>
+                                    <th>ID Coleta</th>
+                                    <th>Data</th>
+                                    <th>Tipo de Material</th>
+                                    <th>Peso (kg)</th>
+                                    <th>Status</th>
+                                </tr>
+                            </thead>
+                            <tbody id="coletasTableBody">
+                                <tr>
+                                    <td colspan="5" class="text-center">Carregando coletas...</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                        <p id="noColetasMessage" class="text-center text-muted d-none">Nenhuma coleta encontrada para este funcionário.</p>
+                    </div>
                 </div>
-                <!-- Rodapé do modal -->
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
                 </div>
