--- a/adm/gerenciarRotas.html
+++ b/adm/gerenciarRotas.html
@@ -8,20 +8,18 @@
         
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
+
+          <script src="/adm/scripts/gerenciamentoRotas.js"></script>
 </head>
 <body class="bg-light min-vh-100">
     <header class="bg-success text-white shadow-sm">
         <div class="container py-3 d-flex justify-content-between align-items-center">
             <div class="d-flex align-items-center">
-                        <div class="logo">
         <!-- Logotipo do sistena -->
-        <img src="assets/img/coleta-verde-header-logo.png" alt="Logo Coleta Verde" />
             <h1>COLETA VERDE</h1>
-        </div>
-                <h1 class="h2 mb-0">Coleta Verde</h1>
             </div>
             <div class="d-flex align-items-center">
-                <a href="../tela-adm/index.html" class="btn btn-dark me-3">Voltar</a>
+                <a href="/adm/adm.html" class="btn btn-dark me-3">Voltar</a>
                 <div class="dropdown">
                     <button class="btn btn-success rounded-circle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                         <i class="fas fa-user"></i>
