Backend para cancelar e confirmar coleta

--- a/funcionario/pages/cancelar-coleta.html
+++ b/funcionario/pages/cancelar-coleta.html
@@ -54,5 +54,7 @@
     <p>Todos os direitos reservados</p>
   </footer>
 
+  <script src="../scripts/cancelar-coleta.js"></script>
+
 </body>
 </html>
