--- a/adm/cadstroFuncionario.html
+++ b/adm/cadstroFuncionario.html
@@ -57,7 +57,10 @@
                     </div>
                     <div class="col-md-6">
                         <label for="senha" class="form-label">Senha</label>
-                        <input type="password" class="form-control" id="senha" name="senha" required>
+                        <div class="input-group"> <input type="password" class="form-control" id="senha" name="senha" required>
+                            <button class="btn btn-outline-secondary" type="button" id="togglePassword">
+                                <i class="fas fa-eye"></i> </button>
+                        </div>
                     </div>
                     <div class="col-md-6">
                         <label for="matricula" class="form-label">Matrícula</label>
