refactor: atualização do js de confirmar e cancelar coleta
- Atualiza o código de 'confirmar-coleta.js' com a ação de confirmar usando event delegation;
- Implementação de atualização do status com desabilitação do botão de confirmar.

--- a/funcionario/pages/cancelar-coleta.html
+++ b/funcionario/pages/cancelar-coleta.html
@@ -32,7 +32,8 @@
 
   <main class="cancelamento">
     <h2>CANCELAMENTO DE COLETA</h2>
-    <form id="form-cancelamento">
+    <form id="cancelarForm" enctype="multipart/form-data">
+      <input type="hidden" id="appointmentId" name="appointmentId" value="" />
 
       <label for="motivo">Motivo do Cancelamento:</label>
       <textarea id="motivo" name="motivo"></textarea>
@@ -42,8 +43,8 @@
 
       <br><br>
       <!-- Botão para enviar -->
-      <div">
-        <button class="confirmar">ENVIAR</button>
+      <div>
+        <button class="confirmar" type="submit">ENVIAR</button>
       </div>
 
     </form>
